# dioxus-ui

./: .env.production  .gitignore  .typos.toml  BLOCK_VIEWER_PLAN.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  LaunchScreen.storyboard  PLAN_DATA_GRID_FULL_PARITY.md  PLAN_MISSING_COMPONENTS.md  README.md  README_ANDROID.md  ROADMAP.md  app.yaml  biome.json  build.rs  deploy.sh  deploy_prod.sh  docker-compose.shared-server.yml  justfile  package.json  pnpm-lock.yaml  tailwind.css  wasmer.toml
app_crates/app_domain/: Cargo.toml
app_crates/app_domain/src/: lib.rs
app_crates/app_domain/src/constants/: route_paths.rs
app_crates/app_domain/src/icons/: all_icons.rs
app_crates/app_domain/src/themes/: mod.rs  theme_name.rs  themes_blocks.rs
app_crates/app_domain/src/themes/cards/: chat.rs  cookie_settings.rs  create_account.rs  exercise_minutes.rs  move_goal.rs  payment_method.rs  payments_table.rs  report_issue.rs  share_this_document.rs  subscriptions.rs  team_members.rs  total_revenue.rs
app_crates/app_domain/src/themes/components/: color_theme_picker.rs  font_picker.rs  mod.rs  oklch.rs  theme_selector.rs
app_crates/registry/: Cargo.toml
app_crates/registry/src/: lib.rs
app_crates/registry/src/blocks/: faq01.rs  faq02.rs  faq03.rs  footer01.rs  footer02.rs  footer03.rs  footer04.rs  footer05.rs  footer_logos.rs  header01.rs  integration01.rs  integration02.rs  integration03.rs  integration04.rs  integration05.rs  integration06.rs  integration07.rs  login01.rs  login02.rs  login03.rs  login04.rs  mod.rs  sidenav01.rs  sidenav02.rs  sidenav03.rs  sidenav04.rs  sidenav05.rs  sidenav06.rs  sidenav07.rs  sidenav08.rs  sidenav09.rs  sidenav10.rs  sidenav11.rs  sidenav_inset_right.rs  sidenav_routes.rs  sidenav_routes_selector.rs  sidenav_routes_simplified.rs
app_crates/registry/src/charts/: area_chart_01.rs  area_chart_02.rs  area_chart_03.rs  area_chart_04.rs  area_chart_05.rs  area_chart_06.rs  area_chart_07.rs  area_chart_08.rs  area_chart_09.rs  area_chart_10.rs  area_chart_11.rs  area_chart_placeholder.rs  bar_chart_01.rs  line_chart_01.rs  mod.rs  pie_chart_01.rs  radar_chart_01.rs  radial_chart_01.rs
app_crates/registry/src/demos/: demo_accordion.rs  demo_accordion_bordered.rs  demo_accordion_card.rs  demo_accordion_icons.rs  demo_accordion_rtl.rs  demo_alert_colors.rs  demo_alert_dialog.rs  demo_alert_dialog_media.rs  demo_alert_dialog_rtl.rs  demo_alert_dialog_small.rs  demo_alert_dialog_small_media.rs  demo_alert_rtl.rs  demo_animate.rs  demo_animate_group.rs  demo_aspect_ratio_portrait.rs  demo_aspect_ratio_square.rs  demo_attachment.rs  demo_attachment_group.rs  demo_attachment_image.rs  demo_attachment_sizes.rs  demo_attachment_states.rs  demo_attachment_trigger.rs  demo_auto_form.rs  demo_avatar_badge.rs  demo_avatar_group.rs  demo_avatar_group_count.rs  demo_avatar_group_count_icon.rs  demo_avatar_size.rs  demo_badge.rs  demo_badge_colors.rs  demo_badge_variants.rs  demo_bento_grid.rs  demo_bento_grid4.rs  demo_bento_grid5.rs  demo_bottom_nav.rs  demo_breadcrumb_dropdown.rs  demo_breadcrumb_rtl.rs  demo_bubble.rs  demo_bubble_alignment.rs  demo_bubble_collapsible.rs  (+218 more)
app_crates/registry/src/hooks/: mod.rs  use_breadcrumb.rs  use_can_scroll.rs  use_can_scroll_vertical.rs  use_cell_edit.rs  use_cell_selection.rs  use_click_outside.rs  use_column_state.rs  use_copy_clipboard.rs  use_data_grid_state.rs  use_data_scrolled.rs  use_drag_selection.rs  use_form.rs  use_handle_day_click.rs  use_history.rs  use_horizontal_scroll.rs  use_input_otp.rs  use_is_mobile.rs  use_lock_body_scroll.rs  use_lock_body_scroll_dialog.rs  use_lock_body_scroll_popover.rs  use_locks.rs  use_media_query.rs  use_pagination.rs  use_press_hold.rs  use_random.rs  use_scroll_lock.rs  use_theme_mode.rs  use_virtual_scroll.rs  use_workflow.rs
app_crates/registry/src/ui/: accordion.rs  action_bar.rs  alert.rs  alert_dialog.rs  animate.rs  attachment.rs  auto_form.rs  avatar.rs  badge.rs  bento_grid.rs  bottom_nav.rs  breadcrumb.rs  bubble.rs  button.rs  button_action.rs  button_group.rs  callout.rs  card.rs  card_carousel.rs  carousel.rs  charts.rs  chat.rs  checkbox.rs  collapsible.rs  command.rs  context_menu.rs  data_grid.rs  date_picker.rs  date_picker_dual_state.rs  date_picker_state.rs  dialog.rs  direction_provider.rs  drag_and_drop.rs  drawer.rs  dropdown_menu.rs  dropzone.rs  empty.rs  expandable.rs  faq_transition.rs  field.rs  (+49 more)
app_crates/registry/src/ui/toast_custom/: _builder.rs  _context.rs  _data.rs  _template_styles.rs  toast.rs  toast_wrapper.rs  toaster.rs
app_crates/registry/src/workflows/: mod.rs  workflow01.rs  workflow02.rs  workflow03.rs  workflow04.rs  workflow05.rs  workflow06.rs  workflow07.rs  workflow08.rs
assets/: tailwind.css
crates/_starters/start-dioxus-fullstack/: .env  .env.example  .gitignore  Cargo.toml  Dioxus.toml  PREREQUISITES.md  README.md  clippy.toml  justfile  package.json  pnpm-lock.yaml  rustfmt.toml  tailwind.css
crates/_starters/start-dioxus-fullstack/assets/: tailwind.css
crates/_starters/start-dioxus-fullstack/migrations/: 20250508000000_create_items_table.sql
crates/_starters/start-dioxus-fullstack/src/: app.rs  main.rs
crates/_starters/start-dioxus-fullstack/src/components/hooks/: use_is_current_path.rs  use_theme_mode.rs
crates/_starters/start-dioxus-fullstack/src/components/layout/: app_bottom_nav.rs  app_wrapper.rs  back_button.rs  header.rs  mod.rs  reload_button.rs  theme_toggle.rs
crates/_starters/start-dioxus-fullstack/src/components/ui/: bottom_nav.rs  button.rs  card.rs  empty.rs  input.rs  pressable.rs  separator.rs  skeleton.rs
crates/_starters/start-dioxus-fullstack/src/domain/: mod.rs
crates/_starters/start-dioxus-fullstack/src/domain/home/: mod.rs  page_home.rs  routes.rs
crates/_starters/start-dioxus-fullstack/src/domain/item/: item_db.rs  item_services.rs  mod.rs  page_item_details.rs  page_item_list.rs  routing.rs  server_fns.rs
crates/_starters/start-dioxus-fullstack/src/utils/: param.rs
crates/_starters/start-dioxus-fullstack/style/: tailwind.css
e2e/: package.json  playwright.config.ts  (+3 more)
(+642 files in other folders)
