[workspace]
members = ["app_crates/registry", "app_crates/app_routes"]
exclude = ["crates/_starters/start-dioxus-fullstack"]

[package]
name = "dioxus-ui"
version = "0.1.0"
authors = ["Max Wells <maxwells.pro@proton.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
registry = { path = "app_crates/registry" }
icons = { version = "0.18", features = ["dioxus"] }
tw_merge = { version = "0.1", features = ["debug"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
html_parser = "0.7.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "regex-fancy"], optional = true }
html-escape = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["web"]
server = ["dioxus/server", "dep:syntect", "dep:html-escape", "dep:reqwest"]
web = ["dioxus/web"]
