[workspace]
members = ["app_crates/*"]
exclude = ["crates/_starters/start-dioxus-fullstack"]

[package]
name = "dioxus-ui"
version = "0.1.0"
authors = ["Max Wells <maxwells.pro@proton.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
registry = { path = "app_crates/registry" }
app_config = { path = "app_crates/app_config" }
app_routes = { path = "app_crates/app_routes" }
app_domain = { path = "app_crates/app_domain" }
icons = { version = "0.18", features = ["dioxus", "dioxus_animated"] }
tw_merge = { version = "0.1", features = ["debug"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
html_parser = "0.7.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy", "regex-fancy"], optional = true }
html-escape = { version = "0.2", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
resend-rs = { version = "0.19", default-features = false, features = ["rustls-tls"], optional = true }
validator = { version = "0.20", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
strum = { version = "0.28", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "CssStyleDeclaration",
  "Location",
  "History",
] }

[build-dependencies]
time = { version = "0.3", features = ["local-offset"] }

[features]
default = ["web"]
server = ["dioxus/server", "dep:syntect", "dep:html-escape", "dep:reqwest", "dep:resend-rs", "dep:validator", "dep:tracing"]
web = ["dioxus/web"]
