[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
icons = { version = "0.18", features = ["dioxus"] }
tw_merge = { version = "0.1", features = ["debug"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
