[package]
name = "registry"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "fullstack"] }
icons = { version = "0.18", features = ["dioxus"] }
tw_merge = { version = "0.1", features = ["debug"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "DomTokenList",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Storage",
  "Navigator",
  "Clipboard",
  "MediaQueryList",
  "EventTarget",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "DragEvent",
  "Node",
  "CssStyleDeclaration",
  "NodeList",
  "ScrollToOptions",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "InputEvent",
] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
